<resources>
    <string name="app_name">PetWell</string>
    <string name="btnLogar">Entrar</string>
    <string name="fragmentRegisterAlimentador">Cadastro de Alimentador</string>
    <string name="msgFeederOKRegister">Seu alimentador foi registrado com sucesso</string>
    <string name="msgFeederOKRegisterTitle">Registro do Alimentados </string>
    <string name="msgLogoutFail">Não foi possível realizar o logout </string>
    <string name="msgLogoutFailTitle">Erro ao realizar o logout </string>
    <string name="msgLoginFail">Login ou senha incorretos</string>
    <string name="msgLoginTitle">Falha no Login</string>
    <string name="msgRegisterFailTitle">Falha no Cadastro</string>
    <string name="msgRegisterOKTitle">Cadastro</string>
    <string name="msgRegisterFail">Erro ao efetuar o cadastro</string>
    <string name="msgRegisterOK">Cadastro efetuado com sucesso</string>
    <string name="msgFeedOKTitle">Animal alimentado</string>
    <string name="msgFeedOK">Animal alimentado com sucesso</string>
    <string name="msgFeederRegisterOK">Alimentador cadastrado com sucesso!</string>
    <string name="msgFeederRegisterFail">Falha ao cadastrar</string>
    <string name="msgFeederRegisterTitle">Cadastro de Alimentador</string>
    <string name="msgFeedFail">Erro ao alimentar</string>
    <string name="msgFeedFailTitle">Erro! O animal não foi alimentado!</string>
    <string name="msgConnTimeout">Não foi possível conectar ao servidor</string>
    <string name="msgConnTimeoutTitle">Falha ao Conectar</string>
    <string name="txtValue">AppNav</string>
    <string name="txtFeederRegister">Registrar Alimentador</string>
    <string name="txtFeed">Alimentar</string>
    <string name="lblFeed">Alimentar</string>
    <string name="btnFeed">Alimentar</string>
    <string name="drawerOpened">Opened</string>
    <string name="drawerClosed">Closed</string>
    <string name="txtRegister">Cadastro</string>
    <string name="txtRegisterClean">Limpar</string>
    <string name="btnRegister">Cadastre-se</string>
    <string name="edtLoginEmail">Insira seu e-mail</string>
    <string name="edtLoginSenha">Insira sua senha</string>
    <string name="edtRegisterName">Insira seu nome</string>
    <string name="edtRegisterEmail">Insira seu e-mail</string>
    <string name="edtRegisterPassword">Insira sua senha</string>
    <string name="btnCadastro">Cadastrar</string>
    <string name="edtName">Nome</string>
    <string name="edtEmail">E-mail</string>
    <string name="edtSenha">Senha</string>
    <string name="lblLoginEmail">E-mail</string>
    <string name="lblLoginPassword">Senha</string>
    <string name="txtRegisterAlimentador">Cadastro de Alimentador</string>
    <string name="txtHintNomeAlimentador">Nome do Alimentador</string>
    <string name="txtHintDevCode">Código da Caixa</string>
    <string name="btnRegisterAlimentador">Registrar</string>
</resources>
